crates/weft-snapshots/tests/snapshots/json/example-alert.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-alert as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Payment"
    },
    "children": [
      {
        "kind": "alert",
        "id": "failed",
        "props": {
          "tone": "danger"
        },
        "children": [
          {
            "kind": "text",
            "id": "failed-text",
            "children": [
              "Your card was declined."
            ]
          },
          {
            "kind": "link",
            "id": "retry",
            "on": {
              "press": "payment.retry"
            },
            "children": [
              "Try again"
            ]
          }
        ]
      }
    ]
  }
}
