crates/weft-snapshots/tests/snapshots/json/example-color-picker.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-color-picker as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Theme"
    },
    "children": [
      {
        "kind": "color-picker",
        "id": "accent",
        "props": {
          "disabled": false,
          "label": "Accent colour",
          "value": {
            "bind": "$.accent"
          }
        },
        "on": {
          "change": "theme.update"
        }
      }
    ]
  }
}
