crates/weft-snapshots/tests/snapshots/json/example-column.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-column as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Users"
    },
    "children": [
      {
        "kind": "table",
        "id": "users",
        "props": {
          "label": "Users"
        },
        "children": [
          {
            "kind": "column",
            "id": "col-name",
            "props": {
              "sort": "ascending"
            },
            "on": {
              "press": "users.sortByName"
            },
            "children": [
              "Name"
            ]
          },
          {
            "kind": "column",
            "id": "col-role",
            "props": {
              "sort": "none"
            },
            "children": [
              "Role"
            ]
          }
        ]
      }
    ]
  }
}
